adding login,signup and addProduct functionality

--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Barun grocery</title>
+    <title>Grocery List</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -10,9 +10,9 @@
         <div class="form-container sign-up-container">
             <form action="#">
                 <span>Create a new account</span>
-                <input type="text"  placeholder="User name" />
-                <input type="passeord" placeholder="Password" />
-                <input type="password" placeholder="Confirm Password" />
+                <input type="text" id="signUpUser" placeholder="User name" autocomplete="off" />
+                <input type="password" id="signUpPassword" placeholder="Password" id="password" autocomplete="off" />
+                <input type="password" id="signUpConfPassword" placeholder="Confirm Password" id="cnfPassword" autocomplete="off" />
                 <button id="signUpBtn">Sign Up</button>
             </form>
         </div>
