adding list of added product show functionality

--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <head>
     <title>Grocery List</title>
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <h2>Welcome</h2>
@@ -20,7 +21,9 @@
             <div class="overlay">
                 <div class="overlay-panel overlay-right">
                     <h1>Product List</h1>
-                    <p id="showProductList">No data available</p>
+                    <p id="showProductList">No data available
+
+                    </p>
                 </div>
             </div>
         </div>
