--- a/home.html
+++ b/home.html
@@ -10,12 +10,11 @@
     <div class="container" id="container">
       
         <div class="form-container sign-in-container">
-            <form action="#">
-                <h1>Add Product</h1>
+            <div class="form-design">
+                <h1 id="addUpdateLabel">Add Product</h1>
                 <input type="text" id="product" placeholder="Product Name" />
-                
-                <button id="saveProduct">Save Product</button>
-            </form>
+                <button id="saveProduct">Save</button>
+            </div>
         </div>
         <div class="overlay-container">
             <div class="overlay">
