--- a/login.html
+++ b/login.html
@@ -17,12 +17,12 @@
             </form>
         </div>
         <div class="form-container sign-in-container">
-            <form action="#">
+            <div class="form-design">
                 <h1>Sign in</h1>
                 <input type="text" id="userName" placeholder="User" />
                 <input type="password" id="password" placeholder="Password" />
                 <button id="loginBtn">Sign In</button>
-            </form>
+            </div>
         </div>
         <div class="overlay-container">
             <div class="overlay">
